Modified sendtoElasticSearch method in kafkaListenerSErvice and added a new class ElsticSearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.kafka.consumer.group-id=My-Consumer-Group
 spring.kafka.listener.missing-topics-fatal=false
 
 my.kafka.producer.topic=test
+my.kafka.producer.numofmesages=-1
+my.kafka.producer.timetokeeprunningmins=5
+server.port=8082
