Modified sendtoElasticSearch method in kafkaListenerSErvice and added a new class ElsticSearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,18 @@ my.kafka.consumer.topic=test
 spring.kafka.consumer.group-id=My-Consumer-Group
 spring.kafka.listener.missing-topics-fatal=false
 
+
+#elastic search
+elasticsearch.host=${ELASTIC_SEARCH_HOST:localhost}
+elasticsearch.port=${ELASTIC_SEARCH_PORT:9200}
+elasticsearch.scheme=${ELASTIC_SEARCH_SCHEME:http}
+elasticsearch.username=${ELASTIC_SEARCH_USER:esuser}
+elasticsearch.password=${ELASTIC_SEARCH_PASS:espass}
+
 my.kafka.producer.topic=test
 my.kafka.producer.numofmesages=-1
 my.kafka.producer.timetokeeprunningmins=5
 server.port=8082
+
+#mode can be: performance or validation
+my.kafka.app.mode=performance
