--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
     	<artifactId>elasticsearch-rest-high-level-client</artifactId>
     	<version>7.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
